Scrollbar hiding issue fixes

--- a/antora-ui-camel/src/css/nav.css
+++ b/antora-ui-camel/src/css/nav.css
@@ -98,7 +98,7 @@ html.is-clipped--nav {
 
 .nav-panel-menu input.search {
   position: absolute;
-  width: 100%;
+  width: 96%;
   border: 1px solid var(--nav-background);
   padding: 0.6rem 1.23rem 0.5rem 1.7rem;
   margin: 0;
